--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -36,7 +36,7 @@
     <title>Catholic Education Board - ePortal</title>
     <link rel="stylesheet" href="/CECePortal/assets/styles/index.css">
     <link rel="stylesheet" href="/CECePortal/assets/styles/media.css">
-    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
+    <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min">
 
 </head>
 
