--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -7,6 +7,7 @@
     <title>Login - Catholic Education Board</title>
     <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
     <link href="/CECePortal/assets/styles/login.css" rel="stylesheet">
+    <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min">
     <meta http-equiv="Content-Security-Policy"
         content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';">
 </head>
