--- a/CECePortal/students_enroll.html
+++ b/CECePortal/students_enroll.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Enrollment</title>
     <link rel="stylesheet" href="/CECePortal/assets/styles/students_enroll.css">
-    <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min">
+    <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -25,13 +25,26 @@
                 <a href="/CECePortal/index.html">
                     <img src="/CECePortal/assets/logo/logo.png" alt="CEC ePortal" class="logo unselectable">
                 </a>
-                <h2>Student Enrollment</h2>
-                <p>Complete the form to enroll a student. Provide accurate information to ensure successful
-                    registration.</p>
+                <h2>Welcome to the Registration Portal</h2>
+                <P>Complete the form to enroll a student. Provide accurate information to ensure successful
+                    registration.</P>
+                <ul>
+                    <li>Register your school or center</li>
+                    <li>Manage student data</li>
+                    <li>Access exam information</li>
+                </ul>
+
                 <p>For any assistance, please <a href="mailto:support@cec-portal.com">Contact Support</a>.</p>
             </div>
 
             <div class="right-panel">
+                <a href="index.html" class="house-icon unselectable">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                        class="bi bi-house" viewBox="0 0 16 16">
+                        <path
+                            d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z" />
+                    </svg>
+                </a>
                 <form id="enrollmentForm" enctype="multipart/form-data">
                     <div class="form-row">
                         <div class="form-group">
