--- a/CECePortal/verify-centre.html
+++ b/CECePortal/verify-centre.html
@@ -7,7 +7,7 @@
     <title>School Registration - Catholic Education Board</title>
     <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/CECePortal/assets/styles/verifycentre.css">
-    <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min">
+    <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css">
 </head>
 
 <body>
