--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -7,7 +7,7 @@
     <title>Login - Catholic Education Board</title>
     <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
     <link href="/CECePortal/assets/styles/login.css" rel="stylesheet">
-    <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min">
+    <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css">
     <meta http-equiv="Content-Security-Policy"
         content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';">
 </head>
@@ -55,7 +55,7 @@
                     <label for="password">Password</label>
                     <input type="password" class="form-control" id="passwd" name="password" placeholder="Enter Password"
                         required>
-                    <i class="bi bi-eye-slash show-password unselectable" id="togglePassword"></i>
+                    <!-- <i class="bi bi-eye-slash show-password unselectable" id="togglePassword"></i> -->
                 </div>
                 <div class="form-actions unselectable">
                     <button type="submit" id="submit" class="btn">Login</button>
