--- a/CECePortal/students_enroll.html
+++ b/CECePortal/students_enroll.html
@@ -4,40 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Enrollment</title>
-    <link rel="stylesheet" href="/CECePortal/assets/styles/students_enroll.css">
+    <title>Student Enrollment - Catholic Education Board</title>
+    <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
+    <link href="/CECePortal/assets/styles/login.css" rel="stylesheet">
     <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="/CECePortal/assets/styles/students_enroll.css">
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';">
 </head>
 
 <body>
-    <div class="enrollment-container">
-        <!-- <header>
-            <nav class="container unselectable">
-                <a href="/CECePortal/index.html">
-                    <img src="/CECePortal/assets/logo/logo2.png" alt="CEC ePortal" class="logo unselectable">
-                </a>
-            </nav>
-        </header> -->
-
-        <div class="form-wrapper">
-            <!-- Inside left-panel div -->
-            <div class="left-panel">
-                <a href="/CECePortal/index.html">
-                    <img src="/CECePortal/assets/logo/logo.png" alt="CEC ePortal" class="logo unselectable">
-                </a>
-                <h2>Welcome to the Registration Portal</h2>
-                <P>Complete the form to enroll a student. Provide accurate information to ensure successful
-                    registration.</P>
-                <ul>
-                    <li>Register your school or center</li>
-                    <li>Manage student data</li>
-                    <li>Access exam information</li>
-                </ul>
-
-                <p>For any assistance, please <a href="mailto:support@cec-portal.com">Contact Support</a>.</p>
-            </div>
-
-            <div class="right-panel">
+    <div class="login-container unselectable"> <!-- Reuse .login-container class -->
+        <!-- Left Panel -->
+        <div class="login-left unselectable"> <!-- Reuse .login-left class -->
+            <a href="/CECePortal/index.html">
+                <img src="/CECePortal/assets/logo/logo.png" alt="CEC ePortal Logo">
+            </a>
+            <h2>Welcome to the Registration Portal</h2>
+            <p>Complete the form to enroll a student. Provide accurate information to ensure successful registration.
+            </p>
+            <ul>
+                <li>Register your school or center</li>
+                <li>Manage student data</li>
+                <li>Access exam information</li>
+            </ul>
+            <p>If you need any help, please <a href="mailto:support@cec-portal.com">Contact Support</a>.</p>
+        </div>
+        <!-- Right Panel -->
+        <div class="login-right unselectable"> <!-- Reuse .login-right class -->
+            <div class="header-icons unselectable">
                 <a href="index.html" class="house-icon unselectable">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-house" viewBox="0 0 16 16">
@@ -45,84 +40,85 @@
                             d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z" />
                     </svg>
                 </a>
-                <form id="enrollmentForm" enctype="multipart/form-data">
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="surname">Surname</label>
-                            <input type="text" id="surname" name="surname" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="firstname">First Name</label>
-                            <input type="text" id="firstname" name="firstname" required>
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="othername">Other Name</label>
-                            <input type="text" id="othername" name="othername">
-                        </div>
-                        <div class="form-group">
-                            <label for="dob">Date of Birth</label>
-                            <input type="date" id="dob" name="dob" required>
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="gender">Gender</label>
-                            <select id="gender" name="gender" required>
-                                <option value="">Select Gender</option>
-                                <option value="Male">Male</option>
-                                <option value="Female">Female</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="disability">Disability</label>
-                            <select id="disability" name="disability" required>
-                                <option value="">Select Disability</option>
-                                <option value="Normal">Normal</option>
-                                <option value="Visually Impaired">Visually Impaired</option>
-                                <option value="Hearing/Speech Impaired">Hearing/Speech Impaired</option>
-                                <option value="Physically Impaired">Physically Impaired</option>
-                                <option value="Mentally Impaired">Mentally Impaired</option>
-                                <option value="Spastic/Palsy/Epilectic Condition">Spastic/Palsy/Epilectic Condition
-                                </option>
-                                <option value="Low Vision">Low Vision</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="state">State</label>
-                            <input type="text" id="state" name="state" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="lga">LGA or City</label>
-                            <input type="text" id="lga" name="lga" required>
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="phone">Phone Number</label>
-                            <input type="tel" id="phone" name="phone" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email (Optional)</label>
-                            <input type="email" id="email" name="email">
-                        </div>
+            </div>
+            <h2>Student Enrollment</h2>
+            <form id="enrollmentForm" enctype="multipart/form-data">
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="surname">Surname</label>
+                        <input type="text" id="surname" name="surname" required>
                     </div>
                     <div class="form-group">
-                        <label for="passport">Passport Photo (Max 15kb)</label>
-                        <input type="file" id="passport" name="passport" accept="image/jpeg, image/jpg" required>
-                        <img id="passportPreview" alt="Passport Preview"
-                            style="display:none; width: 100px; height: 100px; margin-top: 10px;">
+                        <label for="firstname">First Name</label>
+                        <input type="text" id="firstname" name="firstname" required>
                     </div>
-                    <div class="form-actions">
-                        <button type="submit" id="submit">Submit</button>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="othername">Other Name</label>
+                        <input type="text" id="othername" name="othername">
                     </div>
-                </form>
-                <!-- Notification element -->
-                <div id="notification" class="notification unselectable"></div>
-            </div>
+                    <div class="form-group">
+                        <label for="dob">Date of Birth</label>
+                        <input type="date" id="dob" name="dob" required>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="gender">Gender</label>
+                        <select id="gender" name="gender" required>
+                            <option value="">Select Gender</option>
+                            <option value="Male">Male</option>
+                            <option value="Female">Female</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="disability">Disability</label>
+                        <select id="disability" name="disability" required>
+                            <option value="">Select Disability</option>
+                            <option value="Normal">Normal</option>
+                            <option value="Visually Impaired">Visually Impaired</option>
+                            <option value="Hearing/Speech Impaired">Hearing/Speech Impaired</option>
+                            <option value="Physically Impaired">Physically Impaired</option>
+                            <option value="Mentally Impaired">Mentally Impaired</option>
+                            <option value="Spastic/Palsy/Epilectic Condition">Spastic/Palsy/Epilectic Condition
+                            </option>
+                            <option value="Low Vision">Low Vision</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="state">State</label>
+                        <input type="text" id="state" name="state" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="lga">LGA or City</label>
+                        <input type="text" id="lga" name="lga" required>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="phone">Phone Number</label>
+                        <input type="tel" id="phone" name="phone" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email (Optional)</label>
+                        <input type="email" id="email" name="email">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="passport">Passport Photo (Max 15kb)</label>
+                    <input type="file" id="passport" name="passport" accept="image/jpeg, image/jpg" required>
+                    <img id="passportPreview" alt="Passport Preview"
+                        style="display:none; width: 100px; height: 100px; margin-top: 10px;">
+                </div>
+                <div class="form-actions">
+                    <button type="submit" id="submit">Submit</button>
+                </div>
+            </form>
+            <!-- Notification element -->
+            <div id="notification" class="notification unselectable"></div>
         </div>
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
