--- a/CECePortal/students_enroll.html
+++ b/CECePortal/students_enroll.html
@@ -81,20 +81,9 @@
                             <option value="Hearing/Speech Impaired">Hearing/Speech Impaired</option>
                             <option value="Physically Impaired">Physically Impaired</option>
                             <option value="Mentally Impaired">Mentally Impaired</option>
-                            <option value="Spastic/Palsy/Epilectic Condition">Spastic/Palsy/Epilectic Condition
-                            </option>
+                            <option value="Spastic/Palsy/Epilectic Condition">Spastic/Palsy/Epilectic Condition</option>
                             <option value="Low Vision">Low Vision</option>
                         </select>
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="state">State</label>
-                        <input type="text" id="state" name="state" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="lga">LGA or City</label>
-                        <input type="text" id="lga" name="lga" required>
                     </div>
                 </div>
                 <div class="form-row">
@@ -105,6 +94,22 @@
                     <div class="form-group">
                         <label for="email">Email (Optional)</label>
                         <input type="email" id="email" name="email">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="state">State</label>
+                        <select id="state" name="state" required>
+                            <option value="">Select State</option>
+                            <!-- Options will be populated by JavaScript -->
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="lga">LGA or City</label>
+                        <select id="lga" name="lga" required>
+                            <option value="">Select LGA</option>
+                            <!-- Options will be populated by JavaScript -->
+                        </select>
                     </div>
                 </div>
                 <div class="form-group">
@@ -123,6 +128,42 @@
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
     <script src="/CECePortal/assets/scripts/students_enroll.js"></script>
+
+    <script>
+        // Fetch states and populate the state dropdown
+        fetch('https://example.com/api/states')
+            .then(response => response.json())
+            .then(data => {
+                const stateSelect = document.getElementById('state');
+                data.states.forEach(state => {
+                    const option = document.createElement('option');
+                    option.value = state.name;
+                    option.textContent = state.name;
+                    stateSelect.appendChild(option);
+                });
+            })
+            .catch(error => console.error('Error fetching states:', error));
+
+        // Fetch LGAs based on selected state
+        document.getElementById('state').addEventListener('change', function () {
+            const state = this.value;
+
+            fetch(`https://example.com/api/lgas?state=${state}`)
+                .then(response => response.json())
+                .then(data => {
+                    const lgaSelect = document.getElementById('lga');
+                    lgaSelect.innerHTML = '<option value="">Select LGA</option>'; // Clear existing options
+
+                    data.local_governments.forEach(lga => {
+                        const option = document.createElement('option');
+                        option.value = lga;
+                        option.textContent = lga;
+                        lgaSelect.appendChild(option);
+                    });
+                })
+                .catch(error => console.error('Error fetching LGAs:', error));
+        });
+    </script>
 </body>
 
 </html>
