--- a/CECePortal/students_enroll.html
+++ b/CECePortal/students_enroll.html
@@ -124,7 +124,7 @@
         </div>
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
-    <script src="/CECePortal/assets/scripts/students_enroll.js"></script>
+    <script src="/CECePortal/assets/scripts/students_enroll.obfuscated.js"></script>
 </body>
 
 </html>
