--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -133,5 +133,5 @@
         </div>
     </footer>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
-    <script src="/CECePortal/assets/scripts/main.js"></script>
+    <script src="/CECePortal/assets/scripts/main.obfuscated.js"></script>
 </body>
