--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -71,5 +71,5 @@
         </div>
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
-    <script src="/CECePortal/assets/scripts/login.obfuscated.js"></script>
+    <script src="/CECePortal/assets/scripts/login.js"></script>
 </body>
