--- a/CECePortal/verify-centre.html
+++ b/CECePortal/verify-centre.html
@@ -44,6 +44,6 @@
         <div id="notification" class="notification"></div>
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
-    <script src="/CECePortal/assets/scripts/verifycentre.obfuscated.js"></script>
+    <script src="/CECePortal/assets/scripts/verifycentre.js"></script>
 
 </body>
