--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Catholic Education Board</title>
     <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
-    <link href="/CECePortal/assets/styles/login.css" rel="stylesheet">
+    <link href="/CECePortal/assets/styles/login.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css">
     <meta http-equiv="Content-Security-Policy"
         content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';">
