--- a/CECePortal/students_enroll.html
+++ b/CECePortal/students_enroll.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Enrollment - Catholic Education Board</title>
     <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
-    <link href="/CECePortal/assets/styles/login.css" rel="stylesheet">
+    <link href="/CECePortal/assets/styles/login.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/CECePortal/assets/styles/students_enroll.css">
+    <link rel="stylesheet" href="/CECePortal/assets/styles/students_enroll.min.css">
     <!-- <meta http-equiv="Content-Security-Policy"
         content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';"> -->
 </head>
