--- a/CECePortal/verify-centre.html
+++ b/CECePortal/verify-centre.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>School Registration - Catholic Education Board</title>
     <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/CECePortal/assets/styles/verifycentre.css">
+    <link rel="stylesheet" href="/CECePortal/assets/styles/verifycentre.min.css">
     <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css">
 </head>
 
