--- a/CECePortal/password-reset.html
+++ b/CECePortal/password-reset.html
@@ -20,6 +20,7 @@
         <div class="reset-left unselectable">
             <img src="/CECePortal/assets/logo/logo.png" alt="CEC ePortal Logo">
             <p>Please enter your email address to receive instructions for resetting your password.</p>
+            <p>If you need any help, please <a href="mailto:support@cecexams.com">Contact Support</a></p>
         </div>
         <div class="reset-right unselectable">
             <div class="header-icons unselectable"><a href="index.html" class="house-icon unselectable">
