--- a/CECePortal/password-reset.html
+++ b/CECePortal/password-reset.html
@@ -1,53 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reset Password - Catholic Education Board</title>
-    <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css">
-    <link href="/CECePortal/assets/styles/password-reset.min.css" rel="stylesheet">
-    <!-- <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';"> -->
-</head>
-
-<body>
-    <!-- Notification Area -->
-    <div id="notification" class="notification unselectable"></div>
-
-    <div class="reset-container unselectable">
-        <div class="reset-left unselectable">
-            <img src="/CECePortal/assets/logo/logo.png" alt="CEC ePortal Logo">
-            <p>Please enter your email address to receive instructions for resetting your password.</p>
-            <p>If you need any help, please <a href="mailto:support@cecexams.com">Contact Support</a></p>
-        </div>
-        <div class="reset-right unselectable">
-            <div class="header-icons unselectable"><a href="index.html" class="house-icon unselectable">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
-                        class="bi bi-house" viewBox="0 0 16 16">
-                        <path
-                            d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z" />
-                    </svg></a>
-            </div>
-            <h2>Reset Password</h2>
-            <form id="reset-password-form">
-                <div class="form-group unselectable">
-                    <label for="email">Email Address</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email">
-                </div>
-                <div class="form-actions unselectable">
-                    <button type="submit" id="submit" class="btn">Submit</button>
-                </div>
-                <div class="form-links unselectable">
-                    <a href="login.html">Back to Login</a>
-                </div>
-            </form>
-        </div>
-    </div>
-
-    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
-    <script src="/CECePortal/assets/scripts/password-reset.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width,initial-scale=1"> <title>Reset Password - Catholic Education Board</title> <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet"> <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css"> <link href="/CECePortal/assets/styles/password-reset.min.css" rel="stylesheet"> </head> <body>  <div class="reset-container unselectable"> <div class="reset-left unselectable"> <img src="/CECePortal/assets/logo/logo.png" alt="CEC ePortal Logo"> <p>Please enter your email address to receive instructions for resetting your password.</p> <p>If you need any help, please <a href="mailto:support@cecexams.com">Contact Support</a></p> </div> <div class="reset-right unselectable"> <div class="header-icons unselectable"><a href="index.html" class="house-icon unselectable"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16"> <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/> </svg></a> </div> <h2>Reset Password</h2> <form id="reset-password-form"> <div class="form-group unselectable"> <label for="email">Email Address</label> <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email"> </div> <div class="form-actions unselectable"> <button type="submit" id="submit" class="btn">Submit</button> </div> <div class="form-links unselectable"> <a href="login.html">Back to Login</a> </div> </form> </div> </div> <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js">;</script> <script src="/CECePortal/assets/scripts/password-reset.js">;</script> 
