--- a/CECePortal/results-check.html
+++ b/CECePortal/results-check.html
@@ -35,20 +35,20 @@
                 </a>
             </div>
             <h2>Enter Details</h2>
-            <form id="check-results-form" method="POST" action="/CECePortal/check-results.html">
+            <form id="results-form" method="POST" action="/CECePortal/check-results.html">
                 <div class="form-group unselectable">
                     <label for="centreNumber">Centre/School Number</label>
                     <input type="number" class="form-control" id="centreNumber" name="centreNumber"
-                        placeholder="Enter Centre/School Number" required>
+                        placeholder="Enter Centre/School Number">
                 </div>
                 <div class="form-group unselectable">
                     <label for="year">Year</label>
-                    <input type="number" class="form-control" id="year" name="year" placeholder="Enter Year" required>
+                    <input type="number" class="form-control" id="year" name="year" placeholder="Enter Year">
                 </div>
                 <div class="form-group unselectable">
                     <label for="examNumber">Candidate Examination Number</label>
                     <input type="text" class="form-control" id="examNumber" name="examNumber"
-                        placeholder="Enter Candidate Exam Number" required>
+                        placeholder="Enter Candidate Exam Number">
                 </div>
                 <div class="form-actions unselectable">
                     <button type="submit" id="submit" class="btn">Check Results</button>
