--- a/CECePortal/results-check.html
+++ b/CECePortal/results-check.html
@@ -8,6 +8,9 @@
     <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css">
     <link href="/CECePortal/assets/styles/results-check.min.css" rel="stylesheet">
+    <noscript>
+        <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html">
+    </noscript>
     <meta http-equiv="Content-Security-Policy"
         content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';">
 </head>
