--- a/CECePortal/verify-centre.html
+++ b/CECePortal/verify-centre.html
@@ -8,6 +8,11 @@
     <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/CECePortal/assets/styles/verifycentre.min.css">
     <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css">
+    <noscript>
+        <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html">
+    </noscript>
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';">
 </head>
 
 <body>
