--- a/CECePortal/error-page.html
+++ b/CECePortal/error-page.html
@@ -12,7 +12,7 @@
 <body>
     <div class="error-container">
         <div class="error-content">
-            <img src="/CECePortal/assets/logo/logo.png" alt="CEC ePortal Logo" class="error-logo">
+            <img src="/CECePortal/assets/images/no-js.png" alt="JavaScript Required" class="error-image">
             <h1>JavaScript Required</h1>
             <p>This application requires JavaScript to be enabled in your browser.</p>
             <p>Please enable JavaScript and refresh the page.</p>
