--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -32,11 +32,14 @@
     <noscript>
         <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html">
     </noscript>
-    <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';">
+    <!-- <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';"> -->
 </head>
 
+
+
 <body>
+    
     <header>
         <nav class="container unselectable">
             <div class="nav-wrapper unselectable"><a href="index.html" class="logo-link"><img
