--- a/CECePortal/verify-centre.html
+++ b/CECePortal/verify-centre.html
@@ -41,8 +41,8 @@
                 <div class="form-group unselectable"> <label for="centreNumber">Centre/School Number</label> <input
                         type="number" id="centreNumber" name="centreNumber" class="form-control"
                         placeholder="Enter Centre/School Number"> </div>
-                <div class="form-actions"> <button type="submit" id="submit" class="btn">Continue</button> <a
-                        href="/CECePortal/login.html">Back to Login</a> </div>
+                <div class="form-actions"> <button type="submit" id="submit" class="btn">Continue</button>
+                    <div class="form-links unselectable"> <a href="login.html">Back to Login</a> </div>
             </form>
         </div>
     </div>
