--- a/CECePortal/results-check.html
+++ b/CECePortal/results-check.html
@@ -8,6 +8,7 @@
     <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css">
     <link href="/CECePortal/assets/styles/results-check.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/CECePortal/assets/styles/glob.min.css">
     <noscript>
         <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html">
     </noscript>
