--- a/CECePortal/students_enroll.html
+++ b/CECePortal/students_enroll.html
@@ -9,6 +9,8 @@
     <link href="/CECePortal/assets/styles/login.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/CECePortal/assets/styles/students_enroll.min.css">
+    <link rel="stylesheet" href="/CECePortal/assets/styles/glob.min.css">
+
     <noscript>
         <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html">
     </noscript>
@@ -41,25 +43,24 @@
             <form id="enrollmentForm" enctype="multipart/form-data">
                 <div class="form-row">
                     <div class="form-group"><label for="surname">Surname</label><input type="text" id="surname"
-                            name="surname" required></div>
+                            name="surname"></div>
                     <div class="form-group"><label for="firstname">First Name</label><input type="text" id="firstname"
-                            name="firstname" required></div>
+                            name="firstname"></div>
                 </div>
                 <div class="form-row">
                     <div class="form-group"><label for="othername">Other Name</label><input type="text" id="othername"
                             name="othername"></div>
-                    <div class="form-group"><label for="dob">Date of Birth</label><input type="date" id="dob" name="dob"
-                            required></div>
+                    <div class="form-group"><label for="dob">Date of Birth</label><input type="date" id="dob"
+                            name="dob"></div>
                 </div>
                 <div class="form-row">
-                    <div class="form-group"><label for="gender">Gender</label><select id="gender" name="gender"
-                            required>
+                    <div class="form-group"><label for="gender">Gender</label><select id="gender" name="gender">
                             <option value="">Select Gender</option>
                             <option value="Male">Male</option>
                             <option value="Female">Female</option>
                         </select></div>
                     <div class="form-group"><label for="disability">Disability</label><select id="disability"
-                            name="disability" required>
+                            name="disability">
                             <option value="">Select Disability</option>
                             <option value="Normal">Normal</option>
                             <option value="Visually Impaired">Visually Impaired</option>
@@ -72,7 +73,7 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group"><label for="phone">Phone Number</label><input type="tel" id="phone"
-                            name="phone" required></div>
+                            name="phone"></div>
                     <div class="form-group"><label for="email">Email (Optional)</label><input type="email" id="email"
                             name="email"></div>
                 </div>
@@ -86,7 +87,7 @@
                         </select></div>
                 </div>
                 <div class="form-group"><label for="passport">Passport Photo (Max 15kb)</label><input type="file"
-                        id="passport" name="passport" accept="image/jpeg, image/jpg" required><img id="passportPreview"
+                        id="passport" name="passport" accept="image/jpeg, image/jpg"><img id="passportPreview"
                         alt="Passport Preview" style="display:none; width: 100px; height: 100px; margin-top: 10px;">
                 </div>
                 <div class="form-actions"><button type="submit" id="submit">Submit</button></div>
