--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -7,6 +7,7 @@
     <title>Login - Catholic Education Board</title>
     <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
     <link href="/CECePortal/assets/styles/login.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/CECePortal/assets/styles/glob.min.css">
     <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css">
     <noscript>
         <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html">
