--- a/CECePortal/password-reset.html
+++ b/CECePortal/password-reset.html
@@ -7,12 +7,13 @@
     <title>Reset Password - Catholic Education Board</title>
     <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="/CECePortal/assets/styles/glob.min.css">
     <link href="/CECePortal/assets/styles/password-reset.min.css" rel="stylesheet">
     <noscript>
         <meta http-equiv="refresh" content="0;url=/CECePortal/error-page.html">
     </noscript>
     <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';">
+        content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';">
 </head>
 
 <body>
