--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -54,6 +54,7 @@
                         href="password-reset.html">Reset Password</a></div>
             </form>
         </div>
+        <div id="notification" class="notification unselectable"></div>
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js">;</script>
     <script src="/CECePortal/assets/scripts/login.js">;</script>
