--- a/CECePortal/password-reset.html
+++ b/CECePortal/password-reset.html
@@ -38,6 +38,7 @@
                 <div class="form-links unselectable"> <a href="login.html">Back to Login</a> </div>
             </form>
         </div>
+        <div id="notification" class="notification unselectable"></div>
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js">;</script>
     <script src="/CECePortal/assets/scripts/password-reset.js">;</script>
