--- a/CECePortal/students_enroll.html
+++ b/CECePortal/students_enroll.html
@@ -78,9 +78,8 @@
                             name="email"></div>
                 </div>
                 <div class="form-row">
-                    <div class="form-group"><label for="state">State of Origin:</label><select id="state"
-                            onchange="populateLGA()">
-                            <option value="">Select State</option>
+                    <div class="form-group"><label for="state">State of Origin:</label><select id="state">
+                            <option value="">Select State</option>S
                         </select></div>
                     <div class="form-group"><label for="lga">Local Government Area:</label><select id="lga">
                             <option value="">Select an LGA</option>
