--- a/CECePortal/verify-centre.html
+++ b/CECePortal/verify-centre.html
@@ -46,6 +46,7 @@
                     <div class="form-links unselectable"> <a href="login.html">Back to Login</a> </div>
             </form>
         </div>
+        <div id="notification" class="notification unselectable"></div>
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js">;</script>
     <script src="/CECePortal/assets/scripts/verifycentre.js">;</script>
