--- a/CECePortal/error-page.html
+++ b/CECePortal/error-page.html
@@ -19,6 +19,7 @@
             <a href="index.html" class="error-home-link">Return to Home</a>
         </div>
     </div>
+    <div id="notification" class="notification unselectable"></div>
 </body>
 
 </html>
