--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
         content="Effortlessly register for exams and manage student data through the Catholic Education Board's secure online portal. Access comprehensive exam information and streamline school management.">
     <meta name="keywords"
@@ -26,6 +26,7 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="Catholic Education Board">
     <title>Catholic Education Board - ePortal</title>
+    <link rel="icon" href="/CECePortal/assets/icons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/CECePortal/assets/styles/index.min.css">
     <link rel="stylesheet" href="/CECePortal/assets/styles/glob.min.css">
     <link rel="stylesheet" href="/CECePortal/assets/styles/media.min.css">
