--- a/CECePortal/verify-centre.html
+++ b/CECePortal/verify-centre.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>School Registration - Catholic Education Board</title>
+    <link rel="icon" href="/CECePortal/assets/icons/favicon.ico" type="image/x-icon">
     <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/CECePortal/assets/styles/verifycentre.min.css">
     <link rel="stylesheet" href="/CECePortal/assets/styles/glob.min.css">
