--- a/CECePortal/error-page.html
+++ b/CECePortal/error-page.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Required - Catholic Education Board</title>
+    <link rel="icon" href="/CECePortal/assets/icons/favicon.ico" type="image/x-icon">
     <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
     <link href="/CECePortal/assets/styles/error.min.css" rel="stylesheet">
 </head>
