--- a/CECePortal/results-check.html
+++ b/CECePortal/results-check.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Check Results - Catholic Education Board</title>
+    <link rel="icon" href="/CECePortal/assets/icons/favicon.ico" type="image/x-icon">
     <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/CECePortal/assets/styles/bootstrap-icons.min.css">
     <link href="/CECePortal/assets/styles/results-check.min.css" rel="stylesheet">
