--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Login - Catholic Education Board</title>
-    <link rel="icon" href="/CECePortal/assets/icons/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/CECePortal/assets/icons/favicon.svg" type="image/png">
+    <link rel="icon" href="/CECePortal/assets/icons/favicon.png" type="image/png">
     <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
     <link href="/CECePortal/assets/styles/login.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/CECePortal/assets/styles/glob.min.css">
