--- a/CECePortal/students_enroll.html
+++ b/CECePortal/students_enroll.html
@@ -56,8 +56,7 @@
                             name="dob"></div>
                 </div>
                 <div class="form-row">
-                    <div class="form-group"><label for="gender">Gender</label><select id="gender" name="gender"
-                            type="text">
+                    <div class="form-group"><label for="gender">Gender</label><select id="gender" name="gender">
                             <option value="">Select Gender</option>
                             <option value="Male">Male</option>
                             <option value="Female">Female</option>
